<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_height="match_parent"

        android:background="@drawable/background"
        tools:context=".RegisterActivity">
    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="50dp"
               app:srcCompat="@drawable/logo1"/>
    <EditText
            android:id="@+id/edittext_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@drawable/username"
            android:background="#ffffff"
            android:hint="@string/username"/>
    <EditText android:layout_width="match_parent"
              android:id="@+id/edittext_password"
              android:layout_height="wrap_content"
              android:background="#ffffff"
              android:layout_marginLeft="20dp"
              android:inputType="textPassword"
              android:ems="10"
              android:layout_marginTop="20dp"
              android:drawableLeft="@drawable/password"
              android:hint="@string/password"/>
    <EditText android:layout_width="match_parent"
              android:id="@+id/conf_password"
              android:layout_height="wrap_content"
              android:background="#ffffff"
              android:layout_marginLeft="20dp"
              android:inputType="textPassword"
              android:ems="10"
              android:layout_marginTop="20dp"

              android:drawableLeft="@drawable/password"
              android:hint="@string/confirmpassword"/>

    <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:background="#04ea00"
            android:text="@string/register"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="10dp">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="#ffffff"

                  android:text="@string/already_registered"/>
        <TextView android:layout_width="wrap_content"
                  android:id="@+id/textview_login"
                  android:layout_height="wrap_content"
                  android:text="@string/login"
                  android:textColor="#04ea00"
                  android:paddingLeft="10dp"
                  android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>