<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <ImageView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="40dp"
               app:srcCompat="@drawable/logo1"/>
    <EditText
            android:id="@+id/edittext_username"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="50dp"
            android:drawableLeft="@drawable/username"
            android:background="#ffffff"
            android:hint="@string/username"/>
    <EditText android:layout_width="200dp"
              android:id="@+id/edittext_password"
              android:layout_height="40dp"
              android:layout_marginLeft="50dp"
              android:background="#ffffff"
              android:inputType="textPassword"
              android:ems="10"
              android:layout_marginTop="20dp"
              android:drawableLeft="@drawable/password"
              android:hint="@string/password"/>
    <Button
            android:id="@+id/button_login"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:background="#04ea00"
            android:text="@string/login"/>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="10dp">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="#04ea00"

                  android:text="@string/not_registered"/>

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/textview_register"
                  android:layout_height="wrap_content"
                  android:text="@string/register"
                  android:textColor="#04ea00"
                  android:paddingLeft="10dp"
                  android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>